--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Periodic Table</title>
-		<link rel="icon" href="/img/BritannicaLogoSmall.png" type="image/png">
+		<link rel="icon" href="./img/BritannicaLogoSmall.png" type="image/png">
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
